# live_event_api

./: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml  dockerfile  manage.py  pyproject.toml  readme.md  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_categorie_concert_categorie_id_and_more.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
concerts/: models.py  permissions.py  urls.py  views.py
concerts/migrations/: 0001_initial.py
lieux/: admin.py  models.py  urls.py  views.py
lieux/migrations/: 0001_initial.py
live_event_api/: asgi.py  settings.py  urls.py  wsgi.py
mspr2_api/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
organisateurs/: admin.py  models.py  serializers.py  urls.py  views.py
organisateurs/migrations/: 0001_initial.py
roles/: models.py  views.py
roles/migrations/: 0001_initial.py
users/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
